module(name = "rules_nixpkgs_posix_testing")

bazel_dep(name = "rules_nixpkgs_posix")
local_path_override(
    module_name = "rules_nixpkgs_posix",
    path = "../../toolchains/posix",
)

bazel_dep(name = "rules_nixpkgs_core")
local_path_override(
    module_name = "rules_nixpkgs_core",
    path = "../../core",
)

bazel_dep(name = "rules_nixpkgs_java")
local_path_override(
    module_name = "rules_nixpkgs_java",
    path = "../../toolchains/java",
)

bazel_dep(name = "bazel_skylib", version = "1.7.0")
bazel_dep(name = "rules_sh", version = "0.4.0")

# TODO[AH] Remove these transitive dependencies once nixpkgs_java_configure has
#   become a module extension in rules_nixpkgs_java.
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_java", version = "7.3.1")

non_module_deps = use_extension("//:non_module_deps.bzl", "non_module_deps")
use_repo(non_module_deps, "nixpkgs")
use_repo(non_module_deps, "nixpkgs_sh_posix_config")
use_repo(non_module_deps, "nixpkgs_sh_posix_config_toolchain")
register_toolchains("@nixpkgs_sh_posix_config_toolchain//:nixpkgs_sh_posix_toolchain")
# Bazel requries a Java runtime to run tests.
use_repo(non_module_deps, "nixpkgs_java_runtime_toolchain")
register_toolchains("@nixpkgs_java_runtime_toolchain//:all")
