load("@rules_nixpkgs_core//docs:stardoc.bzl", "generate")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

generate(
    name = "README.md",
    input = "//:go.bzl",
    symbol_names = [
        "nixpkgs_go_configure",
    ],
    deps = [
        "@io_bazel_rules_go//go:deps",
        "@rules_nixpkgs_core//:nixpkgs",
    ],
)
