load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "go",
    srcs = ["//:go.bzl"],
    deps = [
        "@io_bazel_rules_go//go:deps",
        "@rules_nixpkgs_core//:nixpkgs",
    ],
)
