module(
    name = "rules_nixpkgs_go",
    version = "0.9.0",
)

bazel_dep(name = "rules_nixpkgs_core", version = "0.9.0")
# TODO: there is no BCR entry for `rules_go` yet, and you will have to add a
# local registry entry to map a commit to a module "version". the caller will
# also have to know this and point `--registry` at the file from right revision
# on GitHub!
# bazel_dep(name = "rules_go", repo_name = "rules_go", version = "0.26.0")
