module(
    name = "rules_nixpkgs_go",
    version = "0.13.0",
)

bazel_dep(name = "rules_nixpkgs_core", version = "0.13.0")
local_path_override(
   module_name = "rules_nixpkgs_core",
   path = "../../core",
)
bazel_dep(name = "rules_go", repo_name = "io_bazel_rules_go", version = "0.39.1")
bazel_dep(name = "bazel_skylib", version = "1.0.3")
bazel_dep(name = "platforms", version = "0.0.4")
