load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "java.bzl",
])

filegroup(
    name = "srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bazel_tools",
    srcs = [
        "@bazel_tools//tools:bzl_srcs",
    ],
)

bzl_library(
    name = "java",
    srcs = [":srcs"],
    visibility = ["//visibility:public"],
    deps = [
        ":bazel_tools",
        "@rules_nixpkgs_core//:nixpkgs",
    ],
)
