load("@rules_nixpkgs_core//docs:stardoc.bzl", "generate")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

generate(
    name = "README.md",
    input = "//:java.bzl",
    symbol_names = [
        "nixpkgs_java_configure",
    ],
    deps = ["@rules_nixpkgs_core//:nixpkgs"],
)
