load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "nodejs",
    srcs = ["//:nodejs.bzl"],
    deps = [
        "@rules_nixpkgs_core//:nixpkgs",
        "@rules_nixpkgs_nodejs//private:common",
        "@rules_nodejs//nodejs:bzl",
    ],
)
