load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["**"]) + [
        "//extensions:srcs",
        "//private:srcs",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "nodejs",
    srcs = ["//:nodejs.bzl"],
    deps = [
        "@rules_nixpkgs_core//:nixpkgs",
        "//private:common",
    ],
)
