load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = [
        "//extensions:srcs",
        "//private:srcs",
        "BUILD.bazel",
        "MODULE.bazel",
        "README.md",
        "WORKSPACE",
        "nodejs.bzl",
        ".bazelignore",
        ".bazeliskrc",
        ".bazelrc",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "nodejs",
    srcs = ["//:nodejs.bzl"],
    deps = [
        "@rules_nixpkgs_core//:nixpkgs",
        "//private:common",
    ],
)
